--- a/src/management_system/templates/management_system/single_employee_items.html
+++ b/src/management_system/templates/management_system/single_employee_items.html
@@ -3,45 +3,16 @@
 
 {% block content %}
 
-<nav class="navbar navbar-expand-lg" style="background-color:#DBD5D3;">
-    <div class="container-fluid">
-      <h3 class="text-black">{{employee}}</h3>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse " id="navbarSupportedContent">
-        <ul class="navbar-nav ms-center mx-5 mb-lg-0">
-                      <li class="nav-item">
-            <a class="btn btn-light me-2" href="{% url 'singleEmployeeProtocols' employee.id %}" role="button">Protokoły</a>
-          </li>
-          <li class="nav-item">
-            <a class="btn btn-success me-2" href="{% url 'newprotocol'  %}?eid={{employee.id}}" role="button">Dodaj sprzęt</a>
-          </li>
-
-
-          <li class="nav-item">
-            <form id="returnItemForm" action="{% url 'employeeReturns' employee.id %}" method="post">
-                {% csrf_token %}
-                <input type="hidden" name="idList" id="idListInput">
-                <button type="submit" class="btn btn-danger me-2">Zdaj sprzęt</button>
-              </form>
-          </li>
-        </ul>
-        <form class="d-flex ms-auto" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-info" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
-
-
-
-
-
-
-
-
+<section class="titlebar">
+  <h3 class="text-black title-float">{{employee}}</h3>
+  <a class="btn-title btn btn-secondary me-2" href="{% url 'singleEmployeeProtocols' employee.id %}" role="button">Protokoły</a>
+  <a class="btn-title btn btn-success me-2" href="{% url 'newprotocol'  %}?eid={{employee.id}}" role="button">Dodaj sprzęt</a>
+  <form id="returnItemForm" action="{% url 'employeeReturns' employee.id %}" method="post">
+      {% csrf_token %}
+      <input type="hidden" name="idList" id="idListInput">
+      <button type="submit" class="btn-title btn btn-danger me-2">Zdaj sprzęt</button>
+  </form>
+</section>
 
 {% comment %} 
 
