--- a/src/management_system/templates/management_system/single_utilization.html
+++ b/src/management_system/templates/management_system/single_utilization.html
@@ -3,10 +3,15 @@
 
 {% block content %}
 
+<section class="titlebar">
+  <h1 class="title-float">Informacje o utylizacji </h1>
+  {% if not utilization.company_transfer_date %}
+    <a class="btn-title btn btn-danger me-2" href="{% url 'utilizationFinalization' utilization.id %}" role="button">Finalizuj</a>
+    <a class="btn-title btn btn-success me-2" href="{% url 'utilizationAddItem' %}?pk={{utilization.id}}" role="button">Dodaj sprzet</a>
+  {% endif%}
+</section>
 
-        <h1>Informacje o utylizacji </h1>
-
-        <ul id="myTab" role="tablist" class="nav nav-tabs nav-pills flex-column flex-sm-row text-center bg-light border-0 rounded-nav">
+        <ul id="myTab" role="tablist" style="clear: both;" class="nav nav-tabs nav-pills flex-column flex-sm-row text-center bg-light border-0 rounded-nav">
           <li class="nav-item flex-sm-fill">
             <a id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true" class="nav-link border-0 text-uppercase font-weight-bold active">Sprzet</a>
           </li>
@@ -18,15 +23,6 @@
 
         <div id="myTabContent" class="tab-content">
           <div id="home" role="tabpanel" aria-labelledby="home-tab" class="tab-pane fade px-4 py-5 show active">
-{% if not utilization.company_transfer_date %}
-<a class="btn btn-danger me-2" href="{% url 'utilizationAddItem' %}?pk={{utilization.id}}" role="button">
-  <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16"><path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/></svg> -->
-  <strong>+</strong>
-</a>
-<a class="btn btn-danger me-2" href="{% url 'utilizationFinalization' utilization.id %}" role="button">
-<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-forward-fill" viewBox="0 0 16 16"><path d="m9.77 12.11 4.012-2.953a.647.647 0 0 0 0-1.114L9.771 5.09a.644.644 0 0 0-.971.557V6.65H2v3.9h6.8v1.003c0 .505.545.808.97.557"/></svg>
-</a>
-{% endif%}
 
 
     <table class="table mb-0">
