--- a/src/management_system/templates/management_system/main.css
+++ b/src/management_system/templates/management_system/main.css
@@ -19,3 +19,33 @@ nav a{
 .btn-title{
 	float: right;
 }
+
+.popup{
+	display: none;
+	background-color: #00000088;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	z-index: 10000000;
+}
+
+.popup-cnt{
+	position: absolute;
+	top: 33%;
+	left: 33%;
+	width: 33%;
+	height: 33%;
+	background-color: #f5f5f5;
+	display: flex;
+	text-align: center;
+	flex-wrap: wrap;
+	align-content: space-around;
+	padding: 10px;
+	border-radius: 10px;
+}
+
+.popup-title{
+	align-self: flex-start;
+}
