--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -40,4 +40,13 @@
             return new bootstrap.Tooltip(tooltipTriggerEl)
         });
     </script>
+    <script>
+        // DaserTwo's popups
+        function showPopup(id){
+            document.getElementById(id).style.display = "block";
+        }
+        function closePopup(id){
+            document.getElementById(id).style.display = "none";
+        }
+    </script>
 </html>
