--- a/src/management_system/templates/management_system/new_protocol_add.html
+++ b/src/management_system/templates/management_system/new_protocol_add.html
@@ -55,19 +55,23 @@
 </span>
 <span class="popup" id="popup2" onclick="closePopup('popup2')">
   <span class="popup-cnt">
-    <h3>Pole pracownik jest wymagane.</h3>
-    <button type="button" onclick="closePopup('popup2')" class="btn btn-success mx-3">OK</button>
+    <section class="popup-column fill">
+      <h3>Pole pracownik jest wymagane.</h3>
+      <button type="button" onclick="closePopup('popup2')" class="btn btn-success mx-3">OK</button>
+    </section>
   </span>
 </span>
 <span class="popup" id="popup3" onclick="closePopup('popup3')">
   <span class="popup-cnt">
-    <h3>Pole przedmiot jest wymagane.</h3>
-    <button type="button" onclick="closePopup('popup3')" class="btn btn-success mx-3">OK</button>
+    <section class="popup-column fill">
+      <h3>Pole przedmiot jest wymagane.</h3>
+      <button type="button" onclick="closePopup('popup3')" class="btn btn-success mx-3">OK</button>
+    </section>
   </span>
 </span>
 <span class="popup" id="popup4" onclick="closePopup('popup4')">
   <span class="popup-cnt">
-    <section style="display: block; text-align: center;">
+    <section class="popup-column fill">
       <h3>Zduplikowany przedmiot.</h3>
       <p id="popup4msg"></p>
       <button type="button" onclick="closePopup('popup4')" class="btn btn-success mx-3">OK</button>
