--- a/src/management_system/templates/management_system/main.css
+++ b/src/management_system/templates/management_system/main.css
@@ -46,6 +46,14 @@ nav a{
 	border-radius: 10px;
 }
 
-.popup-title{
-	align-self: flex-start;
+.popup-column{
+	display: flex;
+	align-content: center;
+	flex-direction: column;
+	flex-wrap: wrap;
+}
+
+.fill{
+	width: 100%;
+	height: 100%;
 }
