Centered the popup div, jejgit add .!

--- a/src/management_system/templates/management_system/main.css
+++ b/src/management_system/templates/management_system/main.css
@@ -47,9 +47,16 @@ nav a{
 }
 
 .popup-column{
-	display: flex;
+	display: inline-flex;
 	align-content: center;
 	flex-direction: column;
+	flex-wrap: wrap;
+}
+
+.popup-row{
+	display: inline-flex;
+	align-content: center;
+	flex-direction: row;
 	flex-wrap: wrap;
 }
 
