API2 update search for items entry

--- a/src/management_system/templates/management_system/new_protocol_add.html
+++ b/src/management_system/templates/management_system/new_protocol_add.html
@@ -107,7 +107,7 @@
         return {
           results: data.map(e => {
             if(e.item_user != "None") return e;
-            return {id: e.id, text: e.item_it + ' ' + e.item_model}
+            return {id: e.id, text: e.item_it + ' ' + e.item_sn + ' ' + e.item_model}
           })
         }
       },
