--- a/src/management_system/templates/management_system/main.css
+++ b/src/management_system/templates/management_system/main.css
@@ -71,3 +71,22 @@ nav a{
 	float: left;
 }
 
+.panel{
+	border: 1px solid;
+	border-radius: 10px;
+	padding: 10px;
+}
+
+.panel-light{
+	border-color: #7777;
+	background-color: #aaaa;
+}
+
+.panel-title{
+	font-size: 2em !important;
+	text-decoration: underline #7777;
+}
+
+.panel-cnt{
+	height: calc(100% - 3em);
+}
