--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -27,9 +27,9 @@
             <div class="row flex-nowrap">
                     {% include 'sidebar.html' %}
                     {%comment%}{% block sidebar %}{% endblock sidebar %}{%endcomment%}
-                    <div class="col py-3 ">
+                    <main class="col py-3 ">
                         {% block content %}{% endblock content %}
-                    </div>
+                    </main>
             </div>
         </div>
     </body>
