--- a/src/management_system/templates/management_system/home.html
+++ b/src/management_system/templates/management_system/home.html
@@ -13,11 +13,11 @@
 		<section class="panel-cnt" style="background-color: red;"></section>
 	</section>
 	<section style="float:left;" class="h-100 w-50">
-		<section class="panel" id="alerts">
+		<section class="panel panel-light" id="alerts">
 			<h2 class="panel-title">ALERTY</h2>
 			<section class="panel-cnt" style="background-color: red;"></section>
 		</section>
-		<section class="panel" id="last_added">
+		<section class="panel panel-light" id="last_added">
 			<h2 class="panel-title">Ostatnio dodane przedmioty</h2>
 			<section class="panel-cnt" style="background-color: red;"></section>
 		</section>
