API2/items supports 'free' flag (not in utilization & not user)

--- a/src/management_system/templates/management_system/home.html
+++ b/src/management_system/templates/management_system/home.html
@@ -8,18 +8,24 @@
 <hr />
 
 <section id="main_panel">
-	<section class="panel panel-light" id="protocols">
-		<h2 class="panel-title">Protokoly</h2>
-		<section class="panel-cnt" style="background-color: red;"></section>
-	</section>
-	<section style="float:left;" class="h-100 w-50">
-		<section class="panel panel-light" id="alerts">
-			<h2 class="panel-title">ALERTY</h2>
+	<section class="panel-pad" id="protocols">
+		<section class="panel panel-light fill">
+			<h2 class="panel-title">Protokoly</h2>
 			<section class="panel-cnt" style="background-color: red;"></section>
 		</section>
-		<section class="panel panel-light" id="last_added">
-			<h2 class="panel-title">Ostatnio dodane przedmioty</h2>
-			<section class="panel-cnt" style="background-color: red;"></section>
+	</section>
+	<section style="float:left;" class="h-100 w-50">
+		<section class="panel-pad" id="alerts">
+			<section class="panel panel-light fill">
+				<h2 class="panel-title">ALERTY</h2>
+				<section class="panel-cnt" style="background-color: red;"></section>
+			</section>
+		</section>
+		<section class="panel-pad" id="last_added">
+			<section class="panel panel-light fill">
+				<h2 class="panel-title">Ostatnio dodane przedmioty</h2>
+				<section class="panel-cnt" style="background-color: red;"></section>
+			</section>
 		</section>
 	</section>
 </section>
