--- a/src/management_system/templates/management_system/new_protocol_add.html
+++ b/src/management_system/templates/management_system/new_protocol_add.html
@@ -109,6 +109,7 @@
         // We send only query as 'q' and limit = 10
         return {
           q: params.term,
+          free: 1,
           limit: 10
         }
       },
