--- a/src/management_system/templates/management_system/main.css
+++ b/src/management_system/templates/management_system/main.css
@@ -2,6 +2,10 @@ body{
 	background-color: #f5f5f5;
 }
 
+main{
+	max-height: 100vh;
+}
+
 .nav-item{
 	padding: 10px 0;
 }
@@ -93,4 +97,8 @@ nav a{
 
 .panel-cnt{
 	height: calc(100% - 3em);
+}
+
+.w-0{
+	width: 0;
 }
