--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -5,7 +5,7 @@
 <!-- Security token -->
 {% csrf_token %}
 
-<nav class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
+<nav class="col-auto col-md-3 col-lg-2 px-sm-2 px-0 bg-dark">
     <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 min-vh-100 sticky-top">
         <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
             <span class="fs-5 d-none d-sm-inline ">Menu</span>
