--- a/src/management_system/templates/management_system/main.css
+++ b/src/management_system/templates/management_system/main.css
@@ -43,12 +43,26 @@ nav a{
 	width: 40%;
 	height: 40%;
 	background-color: #f5f5f5;
-	display: flex;
 	text-align: center;
-	flex-wrap: wrap;
-	align-content: space-around;
 	padding: 10px;
 	border-radius: 10px;
+}
+
+.popup-title{
+	width: 100%;
+	height: 2rem;
+}
+
+.popup-msg{
+	width: 100%;
+	height: calc(100% - 5rem);
+	overflow: auto;
+	text-align: left;
+}
+
+.popup-btns{
+	width: 100%;
+	height: 3rem;
 }
 
 .popup-column{
